--- a/assets/myapp/static/myapp/graph.css
+++ b/assets/myapp/static/myapp/graph.css
@@ -114,6 +114,7 @@ form {
     justify-content: space-between;    
     align-items: center;        /* Centers items vertically */
     gap: 10px;                  /* Adds space between buttons */
+    padding: 10px;
         
 }
 
@@ -358,4 +359,116 @@ button[type="button"] {
     height: 80vh; 
     border: 1px solid #ccc; /* Optional: Adds a border for visibility */
     background-color: #f9f9f9; /* Optional: Light background for contrast */
+}
+
+
+.source-info-panel {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    max-width: 90%;
+    background: white;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+}
+
+.source-info-panel h1 {
+    text-align: center;
+    font-size: 22px;
+    margin-bottom: 15px;
+}
+
+.source-info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.node-attribute p {
+    margin: 5px 0;
+}
+
+#source-tags {
+    list-style: none;
+    padding: 0;
+}
+
+#source-tags li {
+    display: inline-block;
+    background: #008080;
+    color: white;
+    padding: 5px 10px;
+    margin: 3px;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.buttons {
+    text-align: center;
+    margin-top: 15px;
+}
+
+.node-model-close {
+    padding: 8px 15px;
+    background: darkgreen;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.node-model-close:hover {
+    background: darkgreen;
+}
+
+
+/* Modal and Overlay */
+.source-info-overlay,
+.source-info-panel{
+    display: none;  /* Hide both by default */
+}
+
+
+#source-info-popup:checked ~ .source-info-overlay,
+#source-info-popup:checked ~ .source-info-panel {
+    display: block;
+}
+
+/* Overlay styles */
+.source-info-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.source-info-close {
+    background-color: #007bff; 
+    color: white;
+    padding: 12px 20px; /* Add some padding for a larger clickable area */
+    font-size: 16px;
+    font-weight: bold;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s ease-in-out; /* Smooth transition for hover effects */
+    margin-top: 20px; /* Add space above the button */
+    width: 100%; /* Make it stretch to fit the width of the container */
+}
+
+.source-info-close:hover {
+    transform: scale(1.05); /* Slightly grow the button on hover for effect */
+}
+
+.source-info-close:focus {
+    outline: none; /* Remove default focus outline */
+    box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.5); /* Add a custom blue focus ring */
 }
