added checkbox for timeline

--- a/assets/myapp/templates/graph.html
+++ b/assets/myapp/templates/graph.html
@@ -33,10 +33,15 @@
 
 
 
+
 <div id="cy" class="graph"></div> 
 
 <script src="{% static 'js/graph.js' %}"></script>
 
+<div class="checkbox-container">
+    <input type="checkbox" id="timeline-checkbox" checked>
+    <label for="timeline-checkbox">Show Timeline</label>
+</div>
 
 <input type="checkbox" id="popup" style="display: none;">
 <div class="node-overlay"></div>
