--- a/assets/myapp/static/myapp/graph.css
+++ b/assets/myapp/static/myapp/graph.css
@@ -361,7 +361,7 @@ button[type="button"] {
 
 .graph {
     width: 100%;
-    height: 90vh; 
+    height: 75vh; 
     border: 1px solid #ccc; /* Optional: Adds a border for visibility */
     background-color: #f9f9f9; /* Optional: Light background for contrast */
 }
@@ -587,3 +587,20 @@ input[type="radio"]:checked + label {
     background-color: #a30000; /* Even darker red for click effect */
     transform: scale(1);
 }
+
+.checkbox-container {
+    display: flex;
+    align-items: center;
+    gap: 8px; /* Space between checkbox and label */
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+#timeline-checkbox {
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+}
+
+
