--- a/assets/myapp/templates/base.html
+++ b/assets/myapp/templates/base.html
@@ -7,14 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}HistoryGraphy{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'myapp/styles.css' %}">
+    <link rel="icon" type="image/png" href="{% static 'myapp/hg_icon.png' %}">
     {% block extra_css %}
     {% endblock %}
 </head>
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="/">HistoryGraphy</a></li>
+            <ul class="left">
+                <li>
+                    <a href="/">
+                        <img src="{% static 'myapp/hg_logo.png' %}" alt="HistoryGraphy Logo" style="height: 50px;">
+                    </a>
+                </li>
             </ul>
             <ul class="right">
                 {% if user.is_authenticated %}
