--- a/assets/myapp/static/myapp/graph.css
+++ b/assets/myapp/static/myapp/graph.css
@@ -635,3 +635,56 @@ input[type="radio"]:checked + label {
     color: white;
     border-color: #007bff;
 }
+
+
+.bib-container {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    max-width: 600px;
+    height: 60vh;
+    overflow-y: auto;
+    padding: 20px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    display: none;
+    z-index: 1000;
+}
+
+
+
+.textbox {
+    width: 100%;
+    height: 80%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.bib-submit, .bib-cancel {
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.bib-submit {
+    background-color: #007bff;
+    color: white;
+}
+
+.bib-cancel {
+    background-color: #ff4d4d;
+    color: white;
+}
+
+
