--- a/assets/myapp/templates/graph.html
+++ b/assets/myapp/templates/graph.html
@@ -76,39 +76,53 @@
             <script src="{% static 'js/citations.js' %}">
                 
             </script>
+
+            
             <div class="node-attribute">
                 <p>Author/creator:</p>
                 <input type="text" id="author" name="author">
             </div>
             <div class="node-attribute">
-                <p>Date created:</p>
-                <input type="date" id="date-created" name="date_created">
+                <p>Year Created:</p>
+                
+                <input type="text" class="year-input" id="year-created" name="year_input" placeholder="Enter year" pattern="\d*" maxlength="4"
+                       oninput="this.value = this.value.replace(/[^0-9]/g, '')" list="year-options">
+            
+                <datalist id="year-options">
+                    <!-- Year options will be added dynamically with JS -->
+                </datalist>
+            
                 <div class="era-toggle">
-                    <input type="radio" id="created-ad" name="date_created_era" value="AD" checked>
+                    <input type="radio" id="created-ad" name="year_created_era" value="AD" checked>
                     <label for="created-ad">AD</label>
-                    <input type="radio" id="created-bc" name="date_created_era" value="BC">
+                    <input type="radio" id="created-bc" name="year_created_era" value="BC">
                     <label for="created-bc">BC</label>
                 </div>
             </div>
             
+            <script src="{% static 'js/year.js' %}"></script>
+            
+            
             <div class="node-attribute">
-                <p>Date discovered:</p>
-                <input type="date" id="date-discovered" name="date_discovered">
+                <p>Year Discovered:</p>
+            
+                <input type="text" class="year-input" id="year-discovered" name="year_input" placeholder="Enter year" pattern="\d*" maxlength="4"
+                       oninput="this.value = this.value.replace(/[^0-9]/g, '')" list="year-options">
+            
+                <datalist id="year-options">
+                    <!-- Year options will be added dynamically with JS -->
+                </datalist>
+            
                 <div class="era-toggle">
-                    <input type="radio" id="discovered-ad" name="date_discovered_era" value="AD" checked>
+                    <input type="radio" id="discovered-ad" name="year_discovered-era" value="AD" checked>
                     <label for="discovered-ad">AD</label>
-                    <input type="radio" id="discovered-bc" name="date_discovered_era" value="BC">
+                    <input type="radio" id="discovered-bc" name="year_discovered-era" value="BC">
                     <label for="discovered-bc">BC</label>
                 </div>
             </div>
             
-            <script>
-                // Get today's date in YYYY-MM-DD format
-                const today = new Date().toISOString().split('T')[0];
-                // Set max attribute for both date inputs
-                document.getElementById("date-created").max = today;
-                document.getElementById("date-discovered").max = today;
-            </script>
+            <script src="{% static 'js/year.js' %}"></script>
+            
             <div class="node-attribute">
                 <p>Language of source:</p>
                 <input type="text" id="language" name="language">
@@ -164,16 +178,16 @@
             <p id="source-author">N/A</p>
         </div>
 
-        <!-- Date Created Section -->
+        
         <div class="node-attribute">
-            <p><strong>Date Created:</strong></p>
-            <p id="source-date-created">N/A</p> 
+            <p><strong>year Created:</strong></p>
+            <p id="source-year-created">N/A</p> 
         </div>
 
-        <!-- Date Discovered Section -->
+        
         <div class="node-attribute">
-            <p><strong>Date Discovered:</strong></p>
-            <p id="source-date-discovered">N/A</p> 
+            <p><strong>year Discovered:</strong></p>
+            <p id="source-year-discovered">N/A</p> 
         </div>
 
         <div class="node-attribute">
@@ -254,7 +268,14 @@
 </script>
 
 
-
+<div class="bib-container" id ="bib-container" style="display:none;">
+    <textarea class="textbox" placeholder="Enter Bibliography"></textarea>
+    <div class="button-container">
+        <button class="bib-submit" id="bib-submit">Submit</button>
+        <button class="bib-cancel" id="bib-cancel">Cancel</button>
+    </div>
+</div>
+<script src="{% static 'js/bib.js' %}"></script>
 
 <div class="source-info-panel" id="edit-source-info-panel" style="display:none;">
     <div class="source-info-header">
@@ -282,38 +303,62 @@
             </div>
             <div id="edit-selected-cites" class="edit-selected-cites"></div>
         </div>
-        
+        <div class = "buttons">
+            <input type="button" class="source-edit-bib" id="bib-button" value="Cite from Bibliography">
+        </div>
         
         <div class="node-attribute">
             <p><strong>Author/creator:</strong></p>
             <input type="text" id="edit-source-author">
         </div>
+
+
+
+
         <div class="node-attribute">
-            <p><strong>Date created:</strong></p>
-            <input type="date" id="edit-source-date-created" name="edit-source-date_created">
-            <div class="era-toggle">
-                <input type="radio" id="edit-date_created-ad" name="edit-date_created_era" value="AD" checked>
-                <label for="edit-created-ad">AD</label>
-                <input type="radio" id="edit-date_created-bc" name="edit-date_created_era" value="BC">
-                <label for="edit-created-bc">BC</label>
-            </div>
-        </div>
-        <div class="node-attribute">
-            <p><strong>Date discovered:</strong></p>
-            <input type="date" id="edit-source-date-discovered" name="edit-source-date_discovered">
-            <div class="era-toggle">
-                <input type="radio" id="edit-date_discovered-ad" name="edit-date_discovered_era" value="AD" checked>
-                <label for="edit-discovered-ad">AD</label>
-                <input type="radio" id="edit-date_discovered-bc" name="edit-date_discovered_era" value="BC">
-                <label for="edit-discovered-bc">BC</label>
-            </div>
-        </div>
-        <script>
+            <p>Year Created:</p>
+        
+            <input type="text" class="year-input" id="edit-source-year-created" name="year_input" placeholder="Enter year" pattern="\d*" maxlength="4"
+                       oninput="this.value = this.value.replace(/[^0-9]/g, '')" list="year-options">
             
-            // Set max attribute for both date inputs
-            document.getElementById("edit-source-date-created").max = today;
-            document.getElementById("edit-source-date-discovered").max = today;
-        </script>
+                <datalist id="year-options">
+                    <!-- Year options will be added dynamically with JS -->
+                </datalist>
+        
+            <div class="era-toggle">
+                <input type="radio" id="edit-source-created-ad" name="year_created_era" value="AD" checked>
+                <label for="created-ad">AD</label>
+                <input type="radio" id="edit-source-created-bc" name="year_created_era" value="BC">
+                <label for="created-bc">BC</label>
+            </div>
+        </div>
+        
+        <script src="{% static 'js/year.js' %}"></script>
+
+
+
+
+        <div class="node-attribute">
+            <p>Year Discovered:</p>
+        
+            <input type="text" class="year-input" id="edit-source-year-discovered" name="year_input" placeholder="Enter year" pattern="\d*" maxlength="4"
+                       oninput="this.value = this.value.replace(/[^0-9]/g, '')" list="year-options">
+            
+                <datalist id="year-options">
+                    <!-- Year options will be added dynamically with JS -->
+                </datalist>
+        
+            <div class="era-toggle">
+                <input type="radio" id="edit-source-discovered-ad" name="year_discovered_era" value="AD" checked>
+                <label for="created-ad">AD</label>
+                <input type="radio" id="edit-source-discovered-bc" name="year_discovered_era" value="BC">
+                <label for="created-bc">BC</label>
+            </div>
+        </div>
+        
+        <script src="{% static 'js/year.js' %}"></script>
+            
+
         <div class="node-attribute">
             <p><strong>Language:</strong></p>
             <input type="text" id="edit-source-language">
